welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:7: error: not found: type int
def ado(a:int) : Boolean = {
          ^loneTeen:2: error: value &&! is not a member of Boolean
  if ((ado(a)&&!ado(b)) || (ado(b)&&!ado(a))) {
             ^loneTeen:2: error: value &&! is not a member of Boolean
  if ((ado(a)&&!ado(b)) || (ado(b)&&!ado(a))) {
                                  ^